--- a/app/views/telephone/login.html.erb
+++ b/app/views/telephone/login.html.erb
@@ -27,6 +27,10 @@
 						<%= text_field_tag(:place, "", placeholder: "Enter place in chain", id: "placeIn", class: "form-control") %>
 					</div>
 
+					<div class="form-group">
+						<%= text_field_tag(:chain, "", placeholder: "Enter the chain identifier", id: "chainIn", class: "form-control") %>
+					</div>
+
 					<div class="form-group" id="submit">
 						<%= submit_tag("Login", class: "btn btn-primary", id: "submitButton") %>
 					</div>
