--- a/app/views/telephone/survey.html.erb
+++ b/app/views/telephone/survey.html.erb
@@ -6,6 +6,7 @@
     <%= form_tag("/start", method: "get", validates: true) do %>
         <%= hidden_field_tag("place", @place - 1) %>
         <%= hidden_field_tag("index", 0) %>
+        <%= hidden_field_tag("chain", @chain) %>
         <%= submit_tag("Start", class: "btn btn-primary", id: "startBtn") %>
     <% end %>
 </body>
