--- a/app/views/telephone/login.html.erb
+++ b/app/views/telephone/login.html.erb
@@ -20,15 +20,15 @@
 				<%= form_tag("/home", method: "get", validates: true, target: "_blank", style: "margin-top: 30px;") do %>
 
 					<div class="form-group">
-						<%= text_field_tag(:name, "", placeholder: "Enter subject identifier", id: "nameIn", class: "form-control") %>
+						<%= text_field_tag(:name, "", placeholder: "Enter subject identifier", autocomplete: "off", id: "nameIn", class: "form-control") %>
 					</div>
 
 					<div class="form-group">
-						<%= text_field_tag(:place, "", placeholder: "Enter place in chain", id: "placeIn", class: "form-control") %>
+						<%= text_field_tag(:place, "", placeholder: "Enter place in chain", autocomplete: "off", id: "placeIn", class: "form-control") %>
 					</div>
 
 					<div class="form-group">
-						<%= text_field_tag(:chain, "", placeholder: "Enter the chain identifier", id: "chainIn", class: "form-control") %>
+						<%= text_field_tag(:chain, "", placeholder: "Enter the chain identifier", autocomplete: "off", id: "chainIn", class: "form-control") %>
 					</div>
 
 					<div class="form-group" id="submit">
