--- a/app/views/telephone/start_survey.html.erb
+++ b/app/views/telephone/start_survey.html.erb
@@ -28,6 +28,8 @@
 	float: right;
 }
 #submitButton {
+    width: 50px;
+    height: 30px;
 	background-color: #339966;
 	color: #FFF;
 }
@@ -38,6 +40,9 @@
 #passage {
     height: 25em;
     font-size: 300%;
+    color: black;
+}
+#passage:disabled {
     color: black;
 }
 #input {
