--- a/app/views/telephone/survey.html.erb
+++ b/app/views/telephone/survey.html.erb
@@ -13,6 +13,11 @@
 </body>
 
 <style>
+h2 {
+    margin-left: 15px;
+    margin-right: 15p;x
+    margin-top: 30px;
+}
 #startBtn {
     width: 100px;
     height: 60px;
