--- a/app/views/telephone/start_survey.html.erb
+++ b/app/views/telephone/start_survey.html.erb
@@ -26,10 +26,10 @@
 <style>
 #submit {
 	float: right;
+    width: 30%;
+    height: 20%;
 }
 #submitButton {
-    width: 50px;
-    height: 30px;
 	background-color: #339966;
 	color: #FFF;
 }
