--- a/app/views/telephone/start_survey.html.erb
+++ b/app/views/telephone/start_survey.html.erb
@@ -27,13 +27,14 @@
 #submit {
 	float: right;
     width: 25%;
-    height: 15%;
+    height: 25%;
 }
 #submitButton {
 	background-color: #339966;
 	color: #FFF;
     width: 100%;
     height: 100%;
+    font-size: 75%;
 }
 #passage, #input {
     margin-top: 15px;
