--- a/app/views/telephone/start_survey.html.erb
+++ b/app/views/telephone/start_survey.html.erb
@@ -34,16 +34,18 @@
 	color: #FFF;
     width: 100%;
     height: 150%;
-    font-size: 125%;
 }
 #passage, #input {
+    font-size: 40px;
     margin-top: 15px;
     margin-bottom: 15px;
 }
 #passage {
     height: 25em;
-    font-size: 300%;
     color: black;
+}
+input[type='text'], select:focus, textarea {
+    font-size: 40px;
 }
 #passage:disabled {
     color: black;
