--- a/app/views/telephone/start_survey.html.erb
+++ b/app/views/telephone/start_survey.html.erb
@@ -8,10 +8,12 @@
         <div class="col-md-6 col-md-offset-3">
             <div id="form">
                 <%= form_tag("/start", method: "get", validates: true) do %>
-                    <%= hidden_field_tag("index", @passage.number + 1) %>
+                    <%= hidden_field_tag("index", @index) %>
                     <%= hidden_field_tag("place", @passage.derivation) %>
-                    <%= hidden_field_tag("time_spent", 0, id: "timeIn")%>
+                    <%= hidden_field_tag("visited", @visited) %>
+                    <%= hidden_field_tag("time_spent", 0, id: "timeIn") %>
                     <%= hidden_field_tag("chain", @chain) %>
+                    <%= hidden_field_tag("pid", @passage.passage_id) %>
                     <%= text_area_tag("passage", @passage.text, class: "form-control", id: "passage", disabled: true) %>
                     <%= text_area_tag("input", "", class: "form-control", id: "input", placeholder: "Type the news story here") %>
                     <div class="form-group" id="submit">
