--- a/app/views/telephone/survey.html.erb
+++ b/app/views/telephone/survey.html.erb
@@ -4,8 +4,9 @@
 </head>
 <body>
     <%= form_tag("/start", method: "get", validates: true) do %>
-        <%= hidden_field_tag("place", @place - 1) %>
+        <%= hidden_field_tag("place", @place) %>
         <%= hidden_field_tag("index", 0) %>
+        <%= hidden_field_tag("visited", "-1") %>
         <%= hidden_field_tag("chain", @chain) %>
         <h2>On the next few pages, you will be shown a series of news articles. A news article will be shown to you for 30 seconds. Please read it during this time. After 30 seconds, it will be replaced by an empty box. Please type, from memory, the news story in the empty box. When you are done typing, please press "Next"</h2>
         <%= submit_tag("Start", class: "btn btn-primary", id: "startBtn") %>
