--- a/app/views/telephone/start_survey.html.erb
+++ b/app/views/telephone/start_survey.html.erb
@@ -27,34 +27,34 @@
 
 <style>
 #submit {
+  display: none;
 	float: right;
-    width: 15%;
-    height: 25%;
+  width: 15%;
+  height: 25%;
 }
 #submitButton {
 	background-color: #339966;
 	color: #FFF;
-    width: 100%;
-    height: 150%;
+  width: 100%;
+  height: 150%;
 }
 #passage, #input {
-    font-size: 40px;
+    font-size: 2.25vw;
     margin-top: 15px;
     margin-bottom: 15px;
 }
 #passage {
-    height: 25em;
+    height: 90vh;
     color: black;
 }
 input[type='text'], select:focus, textarea {
-    font-size: 40px;
+    font-size: 2.25vw;
 }
 #passage:disabled {
     color: black;
 }
 #input {
     display: none;
-    height: 0em;
-    font-size: 150%;
+    height: 0vw;
 }
 </style>
