--- a/app/views/telephone/start_survey.html.erb
+++ b/app/views/telephone/start_survey.html.erb
@@ -39,7 +39,7 @@
   height: 150%;
 }
 #passage, #input {
-    font-size: 2.25vw;
+    font-size: 4vh;
     margin-top: 15px;
     margin-bottom: 15px;
 }
@@ -48,7 +48,7 @@
     color: black;
 }
 input[type='text'], select:focus, textarea {
-    font-size: 2.25vw;
+    font-size: 4vh;
 }
 #passage:disabled {
     color: black;
