--- a/app/views/telephone/format_data.html.erb
+++ b/app/views/telephone/format_data.html.erb
@@ -5,7 +5,7 @@
 <body>
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <h2>The formatted data is located in data.csv</h2>
+            <h2><%= @text %></h2>
         </div>
     </div>
 </body>
