--- a/app/views/telephone/format_data.html.erb
+++ b/app/views/telephone/format_data.html.erb
@@ -5,14 +5,17 @@
 <body>
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <h2><%= @text %></h2>
+            <% @texts.each do |text| %>
+                <h2><%= text %></h2>
+            <% end %>
         </div>
     </div>
 </body>
 
 <style>
 h1 {
-    margin-top: 30px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     font-size: 10em;
 }
 </style>
