--- a/app/views/telephone/start_survey.html.erb
+++ b/app/views/telephone/start_survey.html.erb
@@ -27,6 +27,10 @@
 </body>
 
 <style>
+#form {
+    width: 125%;
+    margin-left: -12.5%;
+}
 #submit {
   display: none;
 	float: right;
@@ -34,22 +38,23 @@
   height: 25%;
 }
 #submitButton {
-	background-color: #339966;
+    background-color: #339966;
 	color: #FFF;
   width: 100%;
   height: 150%;
 }
 #passage, #input {
-    font-size: 4vh;
+    font-size: 30px;
     margin-top: 15px;
     margin-bottom: 15px;
+    line-height: 2em;
 }
 #passage {
     height: 90vh;
     color: black;
 }
 input[type='text'], select:focus, textarea {
-    font-size: 4vh;
+    font-size: 30px;
 }
 #passage:disabled {
     color: black;
