--- a/app/views/telephone/login.html.erb
+++ b/app/views/telephone/login.html.erb
@@ -17,10 +17,16 @@
 			</div>
 
 			<div id="form">
-				<%= form_tag("/home", method: "get", validates: true, target: "_blank", style: "margin-top: 30px;") do %>
+				<%= form_tag("/first_instr", method: "get", validates: true, target: "_blank", style: "margin-top: 30px;") do %>
+					<%= hidden_field_tag(:visited, "-1") %>
+					<%= hidden_field_tag(:input, "") %>
 
 					<div class="form-group">
 						<%= text_field_tag(:name, "", placeholder: "Enter subject identifier", autocomplete: "off", id: "nameIn", class: "form-control") %>
+					</div>
+
+					<div class="form-group">
+						<%= text_field_tag(:pair, "", placeholder: "Enter the pair number", autocomplete: "off", id: "pairIn", class: "form-control") %>
 					</div>
 
 					<div class="form-group">
@@ -28,7 +34,10 @@
 					</div>
 
 					<div class="form-group">
-						<%= text_field_tag(:chain, "", placeholder: "Enter the chain identifier", autocomplete: "off", id: "chainIn", class: "form-control") %>
+						<%= label_tag(:is_lay, "Scientist", value: false) %>
+						<%= radio_button_tag(:is_lay, false) %>
+						<%= label_tag(:is_lay, "Lay Person", value: true) %>
+						<%= radio_button_tag(:is_lay, true) %>
 					</div>
 
 					<div class="form-group" id="submit">
