--- a/app/views/telephone/survey.html.erb
+++ b/app/views/telephone/survey.html.erb
@@ -1,35 +1,69 @@
 <head>
     <title>Survey</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <%= javascript_include_tag asset_path('survey_script.js') %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-    <%= form_tag("/start", method: "get", validates: true) do %>
-        <%= hidden_field_tag("place", @place) %>
-        <%= hidden_field_tag("index", 0) %>
-        <%= hidden_field_tag("visited", "-1") %>
-        <%= hidden_field_tag("chain", @chain) %>
-        <%= hidden_field_tag("user", @user) %>
-        <h2>On the next few pages, you will be shown a series of news articles. A news article will be shown to you for 30 seconds. Please read it during this time. After 30 seconds, it will be replaced by an empty box. Please type, from memory, the news story in the empty box. When you are done typing, please press "Next"</h2>
-        <%= submit_tag("Start", class: "btn btn-primary", id: "startBtn") %>
-    <% end %>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div id="form">
+                <%= form_tag("/next_instr", method: "get", validates: true) do %>
+                    <%= hidden_field_tag("index", @index) %>
+                    <%= hidden_field_tag("place", @place) %>
+                    <%= hidden_field_tag("visited", @visited) %>
+                    <%= hidden_field_tag("time_spent", 0, id: "timeIn") %>
+                    <%= hidden_field_tag("name", @user) %>
+                    <%= hidden_field_tag("is_lay", @is_lay) %>
+                    <%= hidden_field_tag("pair", @pair) %>
+                    <%= hidden_field_tag("source", @passage.id) %>
+                    <%= hidden_field_tag("old_aset", @old_aset) %>
+                    <%= text_area_tag("passage", @passage.text, class: "form-control", id: "passage", disabled: true) %>
+                    <%= text_area_tag("input", "", class: "form-control", id: "input", placeholder: "Type the news story here") %>
+                    <div class="form-group" id="submit">
+                        <%= submit_tag("Next", disabled: true, class: "btn btn-primary", id: "submitButton") %>
+                    </div>
+                <% end %>
+            </div>
+            <%= button_tag("Continue", class: "btn btn-primary", id: "nextButton") %>
+        </div>
+    </div>
 </body>
 
 <style>
-h2 {
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-top: 30px;
+#form {
+    width: 175%;
+    margin-left: -37.5%;
 }
-#startBtn {
-    width: 100px;
-    height: 60px;
-    font-size: 22.5px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    margin-top: -30px;
-    margin-left: -50px;
+#submit {
+  display: none;
+	float: right;
+  width: 15%;
+  height: 25%;
+}
+#submitButton, #nextButton {
     background-color: #339966;
-    color: #FFF;
+	color: #FFF;
+  width: 100%;
+  height: 150%;
+}
+#passage, #input {
+    font-size: 30px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    line-height: 4em;
+}
+#passage {
+    height: 90vh;
+    color: black;
+}
+input[type='text'], select:focus, textarea {
+    font-size: 30px;
+}
+#passage:disabled {
+    color: black;
+}
+#input {
+    display: none;
+    height: 0vw;
 }
 </style>
